--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,1 +1,7 @@
 <p>characters works!</p>
+
+<ul class="characters">
+    <li *ngFor="let character of characters">
+        {{character.name}}
+    </li>
+</ul>
