Apply basic style to character cards

--- a/src/app/character-card/character-card.component.html
+++ b/src/app/character-card/character-card.component.html
@@ -1,1 +1,5 @@
-{{character?.name}}
+<img class="card-img-top" src={{character?.image}}>
+<div class="card-body">
+    <h5 class="card-title">{{character?.name}}</h5>
+    <p class="card-text">{{character?.location?.name}}</p>
+</div>
