--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="row justify-content-center">
-        <div *ngFor="let character of characters" class="card col-lg-3 col-md-6 col-sm-12">
+        <div *ngFor="let character of characters | paginate: { itemsPerPage: 20, currentPage: page, totalItems: info?.count }" class="card col-lg-3 col-md-6 col-sm-12">
             <app-character-card [character]=character></app-character-card>
         </div>
     </div>
 </div>
+
+<pagination-controls (pageChange)="pageChanged($event)" class="row justify-content-center"></pagination-controls>
