--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,3 +1,4 @@
+<app-searchbar class="container" (searchQuery)="searchCharacters($event)"></app-searchbar>
 <div class="container">
     <div class="row justify-content-center">
         <div *ngFor="let character of characters | paginate: { itemsPerPage: 20, currentPage: page, totalItems: info?.count }" class="card col-lg-3 col-md-6 col-sm-12">
