Create TimeAgo pipe

--- a/src/app/character-card/character-card.component.html
+++ b/src/app/character-card/character-card.component.html
@@ -2,4 +2,5 @@
 <div class="card-body">
     <h5 class="card-title">{{character?.name}}</h5>
     <p class="card-text">{{character?.location?.name}}</p>
+    <app-time-ago [date]=character?.created></app-time-ago>
 </div>
