--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div *ngFor="let character of characters | paginate: { itemsPerPage: 20, currentPage: page, totalItems: info?.count }" class="character-card col-lg-3 col-md-6 col-sm-12">
-            <app-character-card class="card" [character]=character></app-character-card>
+            <app-character-card class="card" [character]=character [routerLink]="['/characters/details', character.id]"></app-character-card>
         </div>
     </div>
 </div>
