--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,8 +1,8 @@
-<app-searchbar class="container" (searchQuery)="searchCharacters($event)"></app-searchbar>
+<app-searchbar class="container" [searchTerms]=searchTerms (searchQuery)="searchCharacters($event)"></app-searchbar>
 
 <div class="container">
     <div class="row justify-content-center">
-        <div *ngFor="let character of characters | paginate: { itemsPerPage: 20, currentPage: page, totalItems: info?.count }" class="character-card col-lg-3 col-md-6 col-sm-12">
+        <div *ngFor="let character of characters | paginate: { itemsPerPage: 20, currentPage: searchQuery.page, totalItems: info?.count }" class="character-card col-lg-3 col-md-6 col-sm-12">
             <app-character-card class="card" [character]=character [routerLink]="['/characters/details', character.id]"></app-character-card>
         </div>
     </div>
