--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,1 +1,12 @@
-<p>locations works!</p>
+<app-searchbar class="container" [searchTerms]=searchTerms (searchQuery)="searchLocations($event)"></app-searchbar>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div *ngFor="let location of locations | paginate: { itemsPerPage: 20, currentPage: searchQuery.page, totalItems: info?.count }" class="location-card col-lg-3 col-md-6 col-sm-12">
+            <app-location-card class="card" [location]=location></app-location-card>
+        </div>
+    </div>
+</div>
+
+<pagination-controls (pageChange)="pageChanged($event)" class="row justify-content-center"></pagination-controls>
+
